--- a/tambola/public/css/styles.css
+++ b/tambola/public/css/styles.css
@@ -1,15 +1,3 @@
-background, html {
-  background: rgba(242, 99, 58, .9);
-  text-align: center;
-  margin: 0px;
-  padding-top: 0px;
-}
-
-.App {
-  padding-top: 50px;
-  font-size: 36px;
-}
-
 * {
   -webkit-appearance: none;
 }
@@ -36,13 +24,13 @@ input:focus {
 }
 
 .container {
-  width: 50%;
+  width: 100%;
   height: 100%;
   display: block;
   position: absolute;
-  left: 10px;
+  left: 0px;
   bottom: 0px;
-  top: 150px;
+  top: 0px;
   color: #fff;
   text-align: center;
 }
@@ -50,7 +38,6 @@ input:focus {
 .container .parts {
   text-align: left;
   padding: 20px;
-
 }
 
 .synth {
@@ -58,7 +45,7 @@ input:focus {
   height:540px;
   padding: 0px;
   margin: 0px;
-  background-color: #03090a;
+  background-color: #408d91;
   font-weight: 300;
   display: inline-block;
   -webkit-touch-callout: none;
@@ -176,7 +163,6 @@ border-radius: 0px 0px 0px 12px;
 border: 0px solid #000000;
 
 }
-
 #piano-keys .last {
 
   border-radius: 0px 0px 12px 0px;
