--- a/tambola/src/index.css
+++ b/tambola/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: Impact, Charcoal, sans-serif;
+  font-size: 48px;
 }
