small tweaks on text and flex

--- a/tambola/src/components/Synth.css
+++ b/tambola/src/components/Synth.css
@@ -13,6 +13,10 @@ background, html {
   border-radius: 25px;
 }
 
+.canvas.clearfix {
+  display: inline-block;
+}
+
 .App {
   padding-top: 50px;
   font-size: 36px;
